(subdir
 asset/css/
 (rule
  (target main.css)
  (deps
   (:config %{workspace_root}/tailwind.config.js)
   (:input %{workspace_root}/src/ocamlorg_frontend/css/styles.css)
   (source_tree %{workspace_root}/src/ocamlorg_frontend))
  (action
   (chdir
    %{workspace_root}
    (run tailwindcss -m -c %{config} -i %{input} -o %{target})))))

(subdir
 asset/
 (rule
  (target feed.xml)
  (deps
   (source_tree %{workspace_root}/data/planet)
   (source_tree %{workspace_root}/data/planet-local-blogs)
   (:ood_gen %{workspace_root}/tool/ood-gen/bin/gen.exe))
  (action
   (chdir
    %{workspace_root}
    (with-stdout-to
     %{target}
     (run %{ood_gen} planet_feed))))))

(subdir
 asset/
 (rule
  (target changelog.xml)
  (deps
   (source_tree %{workspace_root}/data/changelog)
   (:ood_gen %{workspace_root}/tool/ood-gen/bin/gen.exe))
  (action
   (chdir
    %{workspace_root}
    (with-stdout-to
     %{target}
     (run %{ood_gen} changelog_feed))))))

(subdir
 asset/
 (rule
  (target events.xml)
  (deps
   (source_tree %{workspace_root}/data/events)
   (:ood_gen %{workspace_root}/tool/ood-gen/bin/gen.exe))
  (action
   (chdir
    %{workspace_root}
    (with-stdout-to
     %{target}
     (run %{ood_gen} events_feed))))))

(data_only_dirs playground data practice)
