(subdir
 asset/css/
 (rule
  (target main.css)
  (deps
   (:config %{workspace_root}/tailwind.config.js)
   (:input %{workspace_root}/src/ocamlorg_frontend/css/styles.css)
   (source_tree %{workspace_root}/src/ocamlorg_frontend))
  (action
   (chdir
    %{workspace_root}
    (run tailwindcss -m -c %{config} -i %{input} -o %{target})))))

(subdir
 asset/
 (rule
  (target planet.xml)
  (deps
   (source_tree %{workspace_root}/data/planet)
   (source_tree %{workspace_root}/data/planet-local-blogs)
   (:gen_feed %{workspace_root}/tool/ood-gen/bin/feed.exe))
  (action
   (chdir
    %{workspace_root}
    (with-stdout-to
     %{target}
     (run %{gen_feed} planet))))))

(subdir
 asset/
 (rule
  (target changelog.xml)
  (deps
   (source_tree %{workspace_root}/data/changelog)
   (:gen_feed %{workspace_root}/tool/ood-gen/bin/feed.exe))
  (action
   (chdir
    %{workspace_root}
    (with-stdout-to
     %{target}
     (run %{gen_feed} changelog))))))

(subdir
 asset/
 (rule
  (target video.xml)
  (deps
   (source_tree %{workspace_root}/data/youtube.yml)
   (:gen_feed %{workspace_root}/tool/ood-gen/bin/feed.exe))
  (action
   (chdir
    %{workspace_root}
    (with-stdout-to
     %{target}
     (run %{gen_feed} video))))))

(data_only_dirs playground data practice)
