(subdir
 asset/css/
 (rule
  (target main.css)
  (deps
   (:config %{project_root}/tailwind.config.js)
   (:input %{project_root}/src/ocamlorg_frontend/css/styles.css)
   (source_tree %{project_root}/src/ocamlorg_frontend))
  (action
   (chdir
    %{project_root}
    (run tailwindcss -m -c %{config} -i %{input} -o %{target})))))

(subdir
 asset/
 (rule
  (target planet.xml)
  (deps
   (source_tree %{project_root}/data/planet)
   (source_tree %{project_root}/data/planet-local-blogs)
   (:gen_feed %{project_root}/tool/ood-gen/bin/feed.exe))
  (action
   (chdir
    %{project_root}
    (with-stdout-to
     %{target}
     (run %{gen_feed} planet))))))

(subdir
 asset/
 (rule
  (target news.xml)
  (deps
   (source_tree %{project_root}/data/news)
   (:gen_feed %{project_root}/tool/ood-gen/bin/feed.exe))
  (action
   (chdir
    %{project_root}
    (with-stdout-to
     %{target}
     (run %{gen_feed} news))))))

(subdir
 asset/
 (rule
  (target changelog.xml)
  (deps
   (source_tree %{project_root}/data/changelog)
   (:gen_feed %{project_root}/tool/ood-gen/bin/feed.exe))
  (action
   (chdir
    %{project_root}
    (with-stdout-to
     %{target}
     (run %{gen_feed} changelog))))))

(subdir
 asset/
 (rule
  (target events.xml)
  (deps
   (source_tree %{project_root}/data/events)
   (:gen_feed %{project_root}/tool/ood-gen/bin/feed.exe))
  (action
   (chdir
    %{project_root}
    (with-stdout-to
     %{target}
     (run %{gen_feed} events))))))

(subdir
 asset/
 (rule
  (target jobs.xml)
  (deps
   (:gen_feed %{project_root}/tool/ood-gen/bin/feed.exe)
   %{project_root}/data/jobs.yml)
  (action
   (chdir
    %{project_root}
    (with-stdout-to
     %{target}
     (run %{gen_feed} job))))))

(data_only_dirs playground data practice)
