; messages.pot

(rule
 (target messages.pot.expected)
 (deps
  (glob_files %{workspace_root}/src/ocamlorg_frontend/components/*.ml)
  (glob_files %{workspace_root}/src/ocamlorg_frontend/layouts/*.ml)
  (glob_files %{workspace_root}/src/ocamlorg_frontend/pages/*.ml))
 (action
  (chdir
   %{workspace_root}
   (with-stdout-to
    %{target}
    (run ocaml-gettext extract %{deps})))))

(rule
 (alias gen-po)
 (action
  (diff messages.pot messages.pot.expected)))

; en/LC_MESSAGES/messages.po

(subdir
 en
 (include ../dune.inc))

; fr/LC_MESSAGES/messages.po

(subdir
 fr
 (include ../dune.inc))
