(subdir
 js/
 (rule
  (targets playground.min.js)
  (mode promote-until-clean)
  (deps
   (:js %{workspace_root}/src/main.bc.js))
  (action
   (run
    esbuild
    --platform=browser
    --external:fs
    --external:tty
    --external:child_process
    --external:constants
    --minify
    --bundle
    --outfile=playground.min.js
    %{js})))
 (rule
  (targets worker.min.js)
  (mode promote-until-clean)
  (deps
   (:js %{workspace_root}/src/worker.js))
  (action
   (run jsoo_minify %{js} -o %{targets})))
 (rule
  (targets merlin.min.js)
  (mode promote-until-clean)
  (deps
   (:js %{workspace_root}/src/merlin_worker.bc.js))
  (action
   (run jsoo_minify %{js} -o %{targets}))))

(subdir
 asset/
 (rule
  (targets playground_assets.ml)
  (mode promote-until-clean)
  (deps
   (source_tree %{workspace_root}/js))
  (action
  (with-stdout-to
    %{null}
   (run %{bin:ocaml-crunch} -m plain %{workspace_root}/js -o %{workspace_root}/asset/playground_assets.ml)))))
