(subdir
 asset/
 (rule
  (targets playground.min.js)
  (mode promote-until-clean)
  (deps
   (:js %{workspace_root}/src/main.bc.js))
  (action
   (run
    esbuild
    --platform=browser
    --external:fs
    --external:tty
    --external:child_process
    --external:constants
    --minify
    --bundle
    --outfile=playground.min.js
    %{js})))
 (rule
  (targets worker.min.js)
  (mode promote-until-clean)
  (deps
   (:js %{workspace_root}/src/worker.js))
  (action
   (run jsoo_minify %{js} -o %{targets})))
 (rule
  (targets merlin.min.js)
  (mode promote-until-clean)
  (deps
   (:js %{workspace_root}/src/merlin_worker.bc.js))
  (action
   (run jsoo_minify %{js} -o %{targets}))))

(subdir
 digest/
 (rule
  (targets playground_digests.ml)
  (mode promote-until-clean)
  (deps
   (source_tree %{workspace_root}/asset))
  (action
  (with-stdout-to
    %{null}
   (run %{bin:static-file-digest} %{workspace_root}/asset/ -s -o %{workspace_root}/digest/playground_digests.ml)))))
