(subdir
 asset/
 (rule
  (targets playground.min.js)
  (mode
   (promote (until-clean)))
  (deps
   (:js %{project_root}/src/main.bc.js))
  (action
   (run
    esbuild
    --platform=browser
    --external:fs
    --external:tty
    --external:child_process
    --external:constants
    --minify
    --bundle
    --outfile=playground.min.js
    %{js})))
 (rule
  (targets worker.min.js)
  (mode
   (promote (until-clean)))
  (deps
   (:js %{project_root}/src/worker.js)
   stdlib)
  (action
   (run jsoo_minify %{js} -o %{targets})))
 (rule
  (targets merlin.min.js)
  (mode
   (promote (until-clean)))
  (deps
   (:js %{project_root}/src/merlin_worker.bc.js))
  (action
   (run jsoo_minify %{js} -o %{targets})))
 (rule
  (targets
   (dir stdlib))
  (mode
   (promote (until-clean)))
  (action
   (run ../gen_stdlib.sh))))
