(library
 (name ocamlorg_web)
 (libraries dream dream-cli dream-livereload omd ocamlorg ood ood.media))

(rule
 (targets asset.ml)
 (deps
  ../../asset/main.css
  (source_tree ../../asset))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -m plain ../../asset -o %{targets}))))

(include_subdirs unqualified)
