(library
 (name ocamlorg_web)
 (libraries
  dream
  dream-cli
  dream-accept
  omd
  ocamlorg
  ood
  ood.media
  gettext
  gettext-camomile))

(rule
 (targets asset.ml)
 (deps
  ../../asset/main.css
  (source_tree ../../asset))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -m plain ../../asset -o %{targets}))))

(rule
 (targets gettext_asset.ml)
 (deps
  ../../gettext/en/LC_MESSAGES/default.mo
  ../../gettext/fr/LC_MESSAGES/default.mo
  (source_tree ../../gettext/))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -m plain ../../gettext -e mo -o %{targets}))))

(include_subdirs unqualified)
