(library
 (name ocamlorg_web)
 (libraries dream dream-cli dream-accept omd ocamlorg ood ood.media gettext))

(rule
 (targets asset.ml)
 (deps
  ../../asset/main.css
  (source_tree ../../asset))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -m plain ../../asset -o %{targets}))))

(rule
 (targets gettext_asset.ml)
 (deps
  (source_tree ../../gettext/))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -m plain ../../gettext -e po -o %{targets}))))

(include_subdirs unqualified)
