; Stdlib worker

(executable
 (name worker)
 (modes byte)
 (modules worker)
 (libraries js-top-worker))

(executable
 (name merlin_worker)
 (modes js)
 (modules merlin_worker)
 (libraries merlin-js.worker))

(rule
 (target cmis.ml)
 (deps gen_cmis_ml.sh ../asset/stdlib)
 (action
  (with-stdout-to
   %{target}
   (run ./gen_cmis_ml.sh))))

(rule
 (targets export.txt)
 (deps worker.bc)
 (action
  (run jsoo_listunits -o %{targets} stdlib)))

(rule
 (targets worker.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --toplevel
   --export
   %{dep:export.txt}
   --no-cmis
   --pretty
   --enable=effects
   --linkall
   +toplevel.js
   +dynlink.js
   %{dep:worker.bc}
   -o
   %{targets})))

; Playground

(executable
 (name main)
 (modes js)
 (modules
  (:standard \ worker merlin_worker))
 (libraries
  brr
  code-mirror
  merlin-js.code-mirror
  js-top-worker.client
  rpclib-lwt))
