; Stdlib worker

(executable
 (name worker)
 (modes byte)
 (modules worker)
 (libraries js-top-worker joy))

(executable
 (name merlin_worker)
 (modes js)
 (modules merlin_worker)
 (libraries merlin-js.worker))

(rule
 (target cmis.ml)
 (deps gen_cmis_ml.sh ../asset/stdlib ../asset/joy)
 (action
  (with-stdout-to
   %{target}
   (run ./gen_cmis_ml.sh stdlib joy))))

(rule
 (targets export.txt)
 (deps worker.bc)
 (action
  (run jsoo_listunits -o %{targets} stdlib joy)))

(rule
 (targets worker.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --toplevel
   --no-cmis
   --export
   %{dep:export.txt}
   --pretty
   --enable=effects
   --linkall
   +toplevel.js
   +dynlink.js
   %{dep:worker.bc}
   -o
   %{targets})))

; Playground

(executable
 (name main)
 (modes js)
 (modules
  (:standard \ worker merlin_worker))
 (libraries
  brr
  code-mirror
  merlin-js.code-mirror
  js-top-worker.client
  rpclib-lwt
  joy))
