(library
 (name dream_dashboard)
 (public_name ocamlorg.dream-dashboard)
 (libraries
  ocamlorg.global
  dream
  hyper
  yojson
  ppx_deriving_yojson.runtime
  dune-build-info
  metrics
  metrics-lwt
  luv
  user-agent-parser
  timedesc)
 (preprocess
  (pps ppx_deriving_yojson)))

(rule
 (targets asset.ml)
 (deps
  asset/main.css
  (source_tree asset))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -m plain asset -o %{targets}))))

(rule
 (targets commit.ml)
 (action
  (with-stdout-to
   %{targets}
   (progn
    (echo "let hash = \"")
    (pipe-stdout (run "git" "rev-parse" "HEAD") (run "tr" "-d" "\n"))
    (echo "\"\n")
    ))))

(subdir
 asset/
 (rule
  (target main.css)
  (deps
   (:style ../template/style.css)
   (source_tree ../template))
  (action
   (run
    tailwindcss
    -m
    --content
    %{workspace_root}/src/dream_dashboard/template/*.eml
    -i
    %{style}
    -o
    %{target}))))

(include_subdirs unqualified)
