(library
 (name dream_dashboard)
 (public_name ocamlorg.dream-dashboard)
 (libraries
  ocamlorg.global
  ocamlorg_static
  dream
  hyper
  yojson
  ppx_deriving_yojson.runtime
  dune-build-info
  metrics
  metrics-lwt
  luv
  user-agent-parser
  timedesc)
 (preprocess
  (pps ppx_deriving_yojson)))

(subdir
 asset/
 (rule
  (target main.css)
  (deps
   (:style ../template/style.css)
   (source_tree ../template))
  (action
   (run
    tailwindcss
    -m
    --content
    %{workspace_root}/src/dream_dashboard/template/*.eml
    -i
    %{style}
    -o
    %{target}))))

(include_subdirs unqualified)
