; Data library using binary blob embedding
;
; Build flow:
;   1. data-packer parses YAML/MD and creates data.bin
;   2. Assembler embeds data.bin via .incbin
;   3. C stubs provide access to the blob
;   4. data.ml deserializes lazily on first access

; ============================================================
; Library: data_intf (type definitions)
; ============================================================
(library
 (name data_intf)
 (public_name ocamlorg.data_intf)
 (modules data_intf)
 (libraries ptime)
 (preprocess
  (pps ppx_deriving_yaml ppx_deriving.show)))

; ============================================================
; Step 1: Pack data into binary format
; ============================================================
(rule
 (target data.bin)
 (deps
  (source_tree %{workspace_root}/data)
  (:packer %{workspace_root}/_build/default/tool/data-packer/bin/pack.exe))
 (action
  (chdir %{workspace_root}
   (run %{packer} -o %{target}))))

; ============================================================
; Step 2: Copy assembly and C stubs from data-packer
; ============================================================
(rule
 (target data_blob.S)
 (deps %{workspace_root}/tool/data-packer/stubs/data_blob.S)
 (action (copy %{deps} %{target})))

(rule
 (target data_blob_stubs.c)
 (deps %{workspace_root}/tool/data-packer/stubs/data_blob_stubs.c)
 (action (copy %{deps} %{target})))

; ============================================================
; Step 3: Compile assembly to object file
; ============================================================
(rule
 (target data_blob.o)
 (deps data_blob.S data.bin)
 (action
  (run %{cc} -c %{dep:data_blob.S} -o %{target})))

; ============================================================
; Step 4: Create static archive for linking
; ============================================================
(rule
 (target libdata_blob.a)
 (deps data_blob.o)
 (action (run ar rcs %{target} %{deps})))

; ============================================================
; Step 5: V2 assets
; ============================================================
(rule
 (target v2.ml)
 (deps
  (:v2 (source_tree %{workspace_root}/data/v2)))
 (action
  (chdir %{workspace_root}/data/v2
   (with-stdout-to %{target}
    (progn
     (echo "let assets = [\n")
     (pipe-stdout
      (run find . -type f)
      (run cut -b 2-)
      (run sed "s/^/  \"/")
      (run sed "s/$/\";/"))
     (echo "]\n"))))))

; ============================================================
; Library: data (using packed blob)
; ============================================================
(library
 (name data)
 (public_name ocamlorg.data)
 (modules data v2)
 (libraries
  ocamlorg.data_intf
  ocamlorg.data_packer
  bigarray
  bigstringaf
  str)
 (foreign_stubs
  (language c)
  (names data_blob_stubs)
  (flags (:standard)))
 (extra_objects data_blob))
