(library
 (name ocamlorg_frontend)
 (libraries ocamlorg.global dream ocamlorg.data timedesc ocamlorg_static))

(include_subdirs unqualified)

(subdir
 layouts/
 (rule
  (deps
   (glob_files *.eml))
  (targets layout.ml learn_layout.ml package_layout.ml)
  (action
   (run %{bin:dream_eml} %{deps} --workspace %{workspace_root}))))

(subdir
 pages/
 (rule
  (deps
   (glob_files *.eml))
  (targets
   about.ml
   academic_users.ml
   best_practices.ml
   blog.ml
   blog_post.ml
   changelog.ml
   news.ml
   news_post.ml
   books.ml
   community.ml
   workshop.ml
   home.ml
   industrial_users.ml
   learn.ml
   install.ml
   platform.ml
   jobs.ml
   outreachy.ml
   package_overview.ml
   package_documentation.ml
   packages.ml
   packages_autocomplete_fragment.ml
   packages_search.ml
   papers.ml
   problems.ml
   release.ml
   releases.ml
   success_story.ml
   tutorial.ml
   not_found.ml
   package_documentation_not_found.ml
   playground.ml
   page.ml)
  (action
   (run %{bin:dream_eml} %{deps} --workspace %{workspace_root}))))

(subdir
 components/
 (rule
  (deps
   (glob_files *.eml))
  (targets
   copy_to_clipboard_snippet.ml
   footer.ml
   fixed_footer.ml
   header.ml
   navmap.ml
   pagination.ml
   search.ml
   toc.ml
   icons.ml
   package_breadcrumbs.ml
   learn_sidebar.ml)
  (action
   (run %{bin:dream_eml} %{deps} --workspace %{workspace_root}))))
